--- a/Connect4Ai.fsproj
+++ b/Connect4Ai.fsproj
@@ -8,6 +8,7 @@
     <Compile Include="QLearning.fs" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="FSharp.Json" Version="0.4.0" />
     <PackageReference Include="MathNet.Numerics" Version="4.11.0" />
     <PackageReference Include="Synapses" Version="7.3.1" />
   </ItemGroup>
